editors/tree-sitter-wisp/test/corpus/client.txt
================================================================================
Directives
================================================================================

<button on:click.prevent="count++" :hidden="!open" bind:value='q' style:--x="w" transition:fade>Go</button>

--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name)
    (directive
      (directive_name)
      (code))
    (directive
      (directive_name)
      (code))
    (directive
      (directive_name)
      (code))
    (directive
      (directive_name)
      (code))
    (directive
      (directive_name)))
  (text)
  (end_tag
    (tag_name)))

================================================================================
Client holes, spread and island
================================================================================

<p>{:count}</p>
<Chart client:visible {:...rest} />

--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name))
  (client_hole
    (code))
  (end_tag
    (tag_name))
  (self_closing_tag
    (tag_name)
    (directive
      (directive_name))
    (client_hole
      (code))))

================================================================================
Client blocks
================================================================================

{:#each items as i if matches(i.name, q)}
  <li>{:i.name}</li>
{:else}
  <li>none</li>
{:/each}
{:#if open}{:@render s(x)}{:/if}

--------------------------------------------------------------------------------

(document
  (client_block
    (block_start
      (block_open)
      (code))
    (start_tag
      (tag_name))
    (client_hole
      (code))
    (end_tag
      (tag_name))
    (branch
      (branch_open)
      (start_tag
        (tag_name))
      (text)
      (end_tag
        (tag_name)))
    (block_end))
  (client_block
    (block_start
      (block_open)
      (code))
    (client_tag
      (tag_open)
      (code))
    (block_end)))

================================================================================
Script and style
================================================================================

<script>
  let s = '</div>'
  if (a < b) {}
</script>
<script lang="ts">let n: number = 0</script>
<style>.a { color: red }</style>

--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name)))
  (script_element
    (start_tag
      (tag_name)
      (attribute
        (attribute_name)
        (quoted_attribute_value
          (attribute_value))))
    (raw_text)
    (end_tag
      (tag_name)))
  (style_element
    (start_tag
      (tag_name))
    (raw_text)
    (end_tag
      (tag_name))))

================================================================================
Empty script
================================================================================

<script></script>

--------------------------------------------------------------------------------

(document
  (script_element
    (start_tag
      (tag_name))
    (end_tag
      (tag_name))))

================================================================================
Client block closed as a server block, client hole in a value
================================================================================

<p class="card {:mood}">{:#if open}a{/if}</p>

--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value)
        (client_hole
          (code)))))
  (client_block
    (block_start
      (block_open)
      (code))
    (text)
    (block_end))
  (end_tag
    (tag_name)))
