editors/tree-sitter-wisp/test/corpus/page.txt
================================================================================
Block and markup
================================================================================

---
static TODOS: Table<String> = Table::new();
let count = TODOS.len();
---
<title>Todos ({count})</title>

--------------------------------------------------------------------------------

(document
  (frontmatter
    (code))
  (start_tag
    (tag_name))
  (text)
  (hole
    (code))
  (text)
  (end_tag
    (tag_name)))

================================================================================
Empty block
================================================================================

---
---
<p>a</p>

--------------------------------------------------------------------------------

(document
  (frontmatter)
  (start_tag
    (tag_name))
  (text)
  (end_tag
    (tag_name)))

================================================================================
Markup only, a text of dashes
================================================================================

<p>--- not a block</p>
---

--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name))
  (text)
  (end_tag
    (tag_name))
  (text))

================================================================================
Comment and doctype
================================================================================

<!DOCTYPE html>
<!-- a -- b -->

--------------------------------------------------------------------------------

(document
  (doctype)
  (comment))

================================================================================
Tags that do not balance
================================================================================

<ul><li>a<li>b</ul>
<br>
<wisp:head><meta charset="utf-8"></wisp:head>

--------------------------------------------------------------------------------

(document
  (start_tag
    (tag_name))
  (start_tag
    (tag_name))
  (text)
  (start_tag
    (tag_name))
  (text)
  (end_tag
    (tag_name))
  (start_tag
    (tag_name))
  (start_tag
    (tag_name))
  (start_tag
    (tag_name)
    (attribute
      (attribute_name)
      (quoted_attribute_value
        (attribute_value))))
  (end_tag
    (tag_name)))
